--- a/packages/adapter/functions/shadow/_elevation.scss
+++ b/packages/adapter/functions/shadow/_elevation.scss
@@ -6,6 +6,12 @@
 
 $elevation-shadow-tokens: map.get(map.get(tokens.$tokens, shadow), elevation);
 
+/// Suerfaceの階層を表すElevationを表現するためのbox-shadowの値を取得します。
+///
+/// @group Shadow
+/// @example
+///   functions.get-elevation-box-shadow($level: 1)
+///   // 0px -0.1px 1px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.12), 0px 0px 0px 0px rgba(0, 0, 0, 0)
 @function get-elevation-box-shadow($level: 0) {
   $available-levels: helpers.get-elevation-levels();
 
