--- a/packages/adapter/functions/size/_gap.scss
+++ b/packages/adapter/functions/size/_gap.scss
@@ -9,6 +9,11 @@ $gap-size-tokens: map.get(
   gap
 );
 
+/// $levelに対応するgap sizeを取得します。
+///
+/// @group size
+/// @example
+///   functions.get-gap-size($level: m)
 @function get-gap-size($level: m) {
   $tokens: map.get($gap-size-tokens, base);
   $available-levels: helpers.get-sizes();
