scrimをclassベースで使えるようにexport mixin追加

--- a/packages/components-web/_index.scss
+++ b/packages/components-web/_index.scss
@@ -18,6 +18,7 @@
 @forward "@pepabo-inhouse/navigation-drawer" as navigation-drawer-*;
 @forward "@pepabo-inhouse/progress-indicator" as progress-indicator-*;
 @forward "@pepabo-inhouse/radio" as radio-*;
+@forward "@pepabo-inhouse/scrim" as scrim-*;
 @forward "@pepabo-inhouse/select" as select-*;
 @forward "@pepabo-inhouse/side-navigation" as side-navigation-*;
 @forward "@pepabo-inhouse/skeleton" as skeleton-*;
