--- a/packages/components-web/inhouse-components-web.scss
+++ b/packages/components-web/inhouse-components-web.scss
@@ -44,6 +44,7 @@
 @include navigation-drawer.export;
 @include progress-indicator.export;
 @include radio.export;
+@include scrim.export;
 @include select.export;
 @include side-navigation.export;
 @include table.export;
