--- a/packages/components-web/_index.scss
+++ b/packages/components-web/_index.scss
@@ -25,3 +25,4 @@
 @forward "@pepabo-inhouse/table" as table-*;
 @forward "@pepabo-inhouse/textfield" as textfield-*;
 @forward "@pepabo-inhouse/snackbar" as snackbar-*;
+@forward "@pepabo-inhouse/validation-message" as validation-message-*;
