--- a/packages/textfield/_mixins.scss
+++ b/packages/textfield/_mixins.scss
@@ -196,6 +196,13 @@
   }
 }
 
+@mixin -invalid-rule {
+  &[aria-invalid="true"],
+  &:user-invalid {
+    @content;
+  }
+}
+
 @mixin -appearance-rule($appearance: outlined, $intention: neutral) {
   @if $appearance == outlined {
     ._input {
@@ -217,6 +224,13 @@
         outline: adapter.get-focus-ring-outline();
         outline-offset: adapter.get-focus-ring-outline-offset();
       }
+
+      @include -invalid-rule {
+        box-shadow: inset 0 0 0 #{adapter.get-border-size($level: m)} #{adapter.get-field-border-color(
+            $color: negative,
+            $state: enabled
+          )};
+      }
     }
   } @else if $appearance == filled {
     ._input {
@@ -237,6 +251,13 @@
       @include -focus-rule {
         outline: adapter.get-focus-ring-outline();
         outline-offset: adapter.get-focus-ring-outline-offset();
+      }
+
+      @include -invalid-rule {
+        box-shadow: inset 0 #{0 - adapter.get-border-size($level: m)} 0 0 #{adapter.get-field-border-color(
+            $color: negative,
+            $state: enabled
+          )};
       }
     }
   }
