--- a/packages/textfield/_mixins.scss
+++ b/packages/textfield/_mixins.scss
@@ -14,7 +14,9 @@
   $options: map.merge(variables.$default-option, $options);
 
   position: relative;
-  display: inline-block;
+  display: inline-flex;
+  flex-direction: column;
+  gap: adapter.get-gap-size($level: xxs);
   box-sizing: border-box;
 
   // width
