validation-messageが複数行になったときの行間を調整

--- a/packages/validation-message/_mixins.scss
+++ b/packages/validation-message/_mixins.scss
@@ -6,7 +6,7 @@
 @mixin style($options: variables.$default-option) {
   @include adapter.text(
     $level: s,
-    $density: normal
+    $density: dense
   );
   @include -color-rule(map.get($options, intention));
 
