Revert "textfieldにvalidation-message等が追加されても余白が適切になるように調整"
This reverts commit 8faf786991af1a8cedb0db88e96d296739ebde88.

ref: https://github.com/pepabo/inhouse-components-web/pull/60#discussion_r2087870803

--- a/packages/textfield/_mixins.scss
+++ b/packages/textfield/_mixins.scss
@@ -14,9 +14,7 @@
   $options: map.merge(variables.$default-option, $options);
 
   position: relative;
-  display: inline-flex;
-  flex-direction: column;
-  gap: adapter.get-gap-size($level: xxs);
+  display: inline-block;
   box-sizing: border-box;
 
   // width
